--- a/.repo-config/component-jobs/wildfly.yml
+++ b/.repo-config/component-jobs/wildfly.yml
@@ -17,23 +17,7 @@ jobs:
       - shell: echo "build done!"
       # Temp code
       - shell: "echo My version: ${OB_PROJECT_VERSION}"
-  # Build the server dist and the maven repo and copy across to the artifacts folder
-#   save-dist-zip-and-artifacts:
-#     needs: [build]
-#     run:
-#       - shell: pwd
-#       - mvn: install -pl dist -Prelease
-#       - shell: mv dist/target/wildfly-${OB_PROJECT_VERSION}.zip ${OB_ARTIFACTS_DIR}/wildfly.zip
-#       # It would be nice if we could use an action to do the clone instead
-#       - shell: git clone https://github.com/wildfly/wildfly-s2i.git
-#       - shell: cd wildfly-s2i/tools/maven-repo-generator
-#       - mvn: install
-#       - shell: cd ../../..
-#       - shell: java -jar wildfly-s2i/tools/maven-repo-generator/target/maven-repo-generator-1.0.jar dist/target/wildfly-galleon-pack-${OB_PROJECT_VERSION}-all-artifacts-list.txt
-#       # Temp ls -al
-#       - shell: pwd ; ls -al
-#       - shell: mv maven-repo.zip ${OB_ARTIFACTS_DIR}/maven-repo.zip
-#       - shell: ls -al ${OB_ARTIFACTS_DIR}
+
 
   #####################################
   # Parallel tests - depend on wildfly-core-build
@@ -45,7 +29,7 @@ jobs:
     needs: [build]
     run:
 #      - mvn: package ${MAVEN_TEST_PARAMS}
-      - shell: echo Hello >> ${OB_ARTIFACTS_DIR}/smoke-output.txt
+      - shell: echo Hello 
 
 #   ts-basic:
 #     needs: [build]
