--- a/.github/workflows/reproducer.yml
+++ b/.github/workflows/reproducer.yml
@@ -46,12 +46,12 @@ jobs:
         touch ${OB_STATUS_TEXT}
     - name: Maven Build
       run: |
-        mvn -B install ${MAVEN_TEST_PARAMS} ${MAVEN_BUILD_EXTRA_PARAMS}
+        mvn -B install -pl elytron -am ${MAVEN_TEST_PARAMS} ${MAVEN_BUILD_EXTRA_PARAMS}
         echo build done!
     # - name: Setup tmate session
     #   uses: mxschmitt/action-tmate@v3
     - name: Test build Build
-      run: mvn -B package ${MAVEN_TEST_PARAMS} -pl testsuite/manualmode -Dtest=RemoteSshGitRepositoryTestCase
+      run: mvn -B package ${MAVEN_TEST_PARAMS} -pl elytron -Dtest=LdapTestCase#testLdapRealmModifiability
     - name: Run multi-repo-ci-tool 'copy-logs' command
       if: ${{ failure() }}
       run: |
