--- a/.github/workflows/reproducer.yml
+++ b/.github/workflows/reproducer.yml
@@ -51,7 +51,7 @@ jobs:
     # - name: Setup tmate session
     #   uses: mxschmitt/action-tmate@v3
     - name: Test build Build
-      run: mvn -B package ${MAVEN_TEST_PARAMS} -pl elytron -Dtest=LdapTestCase#testLdapRealmModifiability
+      run: mvn -B package ${MAVEN_TEST_PARAMS} -pl elytron -Dtest=TlsTestCase#testSslServiceAuthNoTLS13CipherSuitesOpenSsl
     - name: Run multi-repo-ci-tool 'copy-logs' command
       if: ${{ failure() }}
       run: |
