--- a/.github/workflows/scratch.yml
+++ b/.github/workflows/scratch.yml
@@ -1,7 +1,6 @@
 name: WildFly Only
 'on':
-  push:
-    branches: scratch
+  issues:
 env:
   MAVEN_OPTS: -Xms756M -Xmx1g
 jobs:
@@ -17,133 +16,8 @@ jobs:
       OB_ARTIFACTS_DIR: .ci-tools/artifacts
       OB_STATUS_TEXT: .ci-tools/artifacts/status-text.txt
       OB_MAVEN_DEPENDENCY_VERSIONS: ''
-    outputs:
-      git-sha: ${{steps.git-rev-parse.outputs.git-sha}}
-      version_wildfly: ${{steps.grab-version.outputs.version_wildfly}}
     steps:
-    - uses: actions/checkout@v2
-      with:
-        repository: kabir/wildfly
-        ref: gh-action-fixes
-    - uses: actions/checkout@v2
-      with:
-        ref: multi-repo-ci-branch-8
-        path: .ci-tools
-    - uses: actions/cache@v1
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-maven-
-    - uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-    - name: Grab project version
-      id: grab-version
-      run: |
-        mvn -B help:evaluate -Dexpression=project.version -pl .
-        TMP="$(mvn -B help:evaluate -Dexpression=project.version -pl . | grep -v '^\[')"
-        echo "version: ${TMP}"
-        echo "Saving version to env var: \$version_wildfly"
-        echo "::set-output name=version_wildfly::${TMP}"
-        echo "::set-env name=OB_PROJECT_VERSION::${TMP}"
-    - name: Parsing SHA-1 into output variable
-      id: git-rev-parse
-      run: |
-        TMP=$(git rev-parse HEAD)
-        echo "Saving version to env var: \$git-sha"
-        echo "::set-output name=git-sha::${TMP}"
-    - name: Add '::1 localhost' to hosts file
-      run: sudo bash -c 'echo ::1 localhost >> /etc/hosts'
-    - name: Make OB_ARTIFACTS_DIR an absolute path
-      run: echo "::set-env name=OB_ARTIFACTS_DIR::${GITHUB_WORKSPACE}/${OB_ARTIFACTS_DIR}"
-    - name: Make OB_STATUS_TEXT an absolute path
-      run: echo "::set-env name=OB_STATUS_TEXT::${GITHUB_WORKSPACE}/${OB_STATUS_TEXT}"
-    - name: Ensure artifacts dir is there
-      run: |
-        mkdir -p ${OB_ARTIFACTS_DIR}
-        touch ${OB_STATUS_TEXT}
-    - name: Run multi-repo-ci-tool 'merge-large-files-in-directory' command
-      run: |
-        java -jar .ci-tools/multi-repo-ci-tool.jar merge-large-files-in-directory ${OB_ARTIFACTS_DIR}
-    - name: Maven Build
-      run: "mvn -B install broken -pl naming -am -DskipTests \n"
-    - name: Run multi-repo-ci-tool 'split-large-files-in-directory' command
-      run: |
-        java -jar .ci-tools/multi-repo-ci-tool.jar split-large-files-in-directory ${OB_ARTIFACTS_DIR}
-    - name: Run multi-repo-ci-tool 'backup-maven-artifacts' command
-      if: ${{ success() }}
-      run: |
-        java -jar .ci-tools/multi-repo-ci-tool.jar backup-maven-artifacts /home/runner/work/maven-snapshot-ci/maven-snapshot-ci/pom.xml /home/runner/.m2/repository /home/runner/work/maven-snapshot-ci/maven-snapshot-ci/.ci-tools/repo-backups/wildfly
-    - name: Git command-line work
-      working-directory: .ci-tools
-      if: ${{ success() }}
-      run: |
-        git config --global user.name "CI Action"
-        git config --global user.email "ci@example.com"
-        git add -A
-        branch_status=$(git status --porcelain)
-        [[ ! -z "${branch_status}}" ]] && git commit -m "Back up the maven artifacts created by wildfly" || echo "No changes"
-        TMP=$(git branch | sed -n -e 's/^\* \(.*\)/\1/p')
-        git fetch origin ${TMP}
-        git rebase origin/${TMP}
-        git push origin ${TMP}
-    - name: Run multi-repo-ci-tool 'copy-logs' command
-      if: ${{ failure() }}
-      run: |
-        java -jar .ci-tools/multi-repo-ci-tool.jar copy-logs . .project-build-logs/wildfly-build
-    - if: ${{ failure() }}
-      run: |
-        cd .project-build-logs
-        zip -r wildfly-build.zip wildfly-build
-        rm -rf wildfly-build
-    - uses: actions/upload-artifact@v2
-      if: ${{ failure() }}
-      with:
-        name: wildfly_only-logs-20200929-140442
-        path: .project-build-logs
-  ob-ci-status-success:
-    name: Issue Status Report success
-    runs-on: ubuntu-latest
-    if: ${{ success() }}
-    needs:
-    - wildfly-build
-    env:
-      wildfly_build_git_sha: ${{needs.wildfly-build.outputs.git-sha}}
-      status_output: ${{needs.ob-ci-read-status-output.outputs.status-output}}
-    steps:
-    - name: report-success
-      uses: actions/github-script@v3
-      with:
-        github-token: ${{ secrets.OB_MULTI_CI_PAT }}
-        script: |-
-          await github.issues.addLabels({
-            issue_number: 8,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            labels: ['CI-Failure']
-          })
-          // snip
-  ob-ci-status-failure:
-    name: Issue Status Report Failure
-    runs-on: ubuntu-latest
-    if: ${{ failure() }}
-    needs:
-    - wildfly-build
-    env:
-      wildfly_build_git_sha: ${{needs.wildfly-build.outputs.git-sha}}
-      status_output: ${{needs.ob-ci-read-status-output.outputs.status-output}}
-    steps:
-    - name: report-failure
-      uses: actions/github-script@v3
-      with:
-        github-token: ${{ secrets.OB_MULTI_CI_PAT }}
-        script: |-
-          await github.issues.addLabels({
-            issue_number: 8,
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            labels: ['CI-Failure']
-          })
-          // snip
-
-
+    - name: Dump GitHub context
+      env:
+        GITHUB_CONTEXT: ${{ toJson(github) }}
+      run: echo "$GITHUB_CONTEXT"
