--- a/.github/workflows/reproducer.yml
+++ b/.github/workflows/reproducer.yml
@@ -51,7 +51,7 @@ jobs:
     # - name: Setup tmate session
     #   uses: mxschmitt/action-tmate@v3
     - name: Test build Build
-      run: mvn -B package ${MAVEN_TEST_PARAMS} -Dinteg.module -Dts.elytron -pl testsuite/integration/elytron -Dtest=TLSSyslogAuditLogTestCase,UndertowTwoWaySslNeedClientAuthTestCase
+      run: mvn -B package ${MAVEN_TEST_PARAMS} -pl testsuite/integration/manualmode -Dtest=ReplicatedFailoverTestCase
     - name: Run multi-repo-ci-tool 'copy-logs' command
       if: ${{ failure() }}
       run: |
@@ -60,12 +60,12 @@ jobs:
       run: |
         mkdir -p .project-build-logs
         cd .project-build-logs
-        zip -r wildfly-core-build.zip wildfly-core-build
-        rm -rf wildfly-core-build
+        zip -r wildfly-build.zip wildfly-build
+        rm -rf wildfly-build
     - uses: actions/upload-artifact@v2
       if: ${{ failure() }}
       with:
-        name: wildfly_core_only-logs-20200929-182401
+        name: wildfly_logs
         path: .project-build-logs
 
   
