Push to get another run

--- a/.github/workflows/reproducer.yml
+++ b/.github/workflows/reproducer.yml
@@ -1,4 +1,4 @@
-name: WildFly Full Only
+name: VDX reproducer
 'on':
   push:
 env:
@@ -48,10 +48,11 @@ jobs:
       run: |
         mvn -B install ${MAVEN_TEST_PARAMS} ${MAVEN_BUILD_EXTRA_PARAMS}
         echo build done!
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+        #- name: Setup tmate session
+        #    uses: mxschmitt/action-tmate@v3
     - name: Test build Build
-      run: mvn -B package ${MAVEN_TEST_PARAMS} -pl testsuite/integration/vdx -Dts.timeout.factor=300
+      #-Dts.timeout.factor=300
+      run: mvn -B package ${MAVEN_TEST_PARAMS} -pl testsuite/integration/vdx 
     - name: Run multi-repo-ci-tool 'copy-logs' command
       if: ${{ failure() }}
       run: |
