--- a/.github/workflows/reproducer.yml
+++ b/.github/workflows/reproducer.yml
@@ -116,6 +116,7 @@ jobs:
         
       - name: Upload artifacts
         uses: actions/upload-artifact@v2.2.0
+        if: always()
         with:
           name: reproducer
           if-no-files-found: warn
