--- a/.github/workflows/reproducer.yml
+++ b/.github/workflows/reproducer.yml
@@ -66,9 +66,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           # Adjust for wildFly or WildFly Core as needed
-          repository: kabir/wildfly
+          repository: wildfly/wildfly
           # WildFly or WildFly Core branch here
-          ref: gh-action-fixes
+          ref: master
 
       - name: Pull down Maven Cache
         # It is a good idea to do a run without tests first, as the cache only gets
